--- a/requirements.txt
+++ b/requirements.txt
@@ -4,6 +4,7 @@ charset-normalizer==3.4.1
 Django==4.2.20
 django-cors-headers==4.7.0
 djangorestframework==3.15.2
+djangorestframework-simplejwt>=5.2.2
 idna==3.10
 pillow==11.1.0
 requests==2.32.3
